[package]
name = "dancing-cells"
description = "Implementation of Solnon and Knuths Dancing Cells algorithm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/recmo/dancing-cells"
readme = "Readme.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["dancing-cells", "algorithm", "exact-cover", "constraint-sat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
